Pre-Update Text Changes
-Changed text for updates page
-Changed app version

--- a/www/index.html
+++ b/www/index.html
@@ -305,12 +305,18 @@
       <div role="main" class="ui-content">
         <h3>{{h3}}</h3>
         <p>{{p1}}</p>
+        <ol>
+          <li>{{li1}}</li>
+          <li>{{li2}}</li>
+         </ol>
+        <p>{{p2}}</p>
+        <p>{{p3}}</p>
       </div>
       <!-- footer -->
       <div data-role="footer" data-position="fixed" data-id="updates_1" data-tap-toggle="false">
         <div data-role="navbar">
           <ul>
-            <li><a href="" id="see-new-updates" data-transition="none"><span class="ui-icon-carat-r ui-btn-icon-notext inlineIcon"></span>{{footer.li1}}</a></li>
+<!--             <li><a href="" id="see-new-updates" data-transition="none"><span class="ui-icon-carat-r ui-btn-icon-notext inlineIcon"></span>{{footer.li1}}</a></li> -->
             <li><a href="" id="take-me-back" data-transition="none"><span class="ui-icon-carat-r ui-btn-icon-notext inlineIcon"></span>{{footer.li2}}</a></li>
           </ul>
         </div>
