- Fix ios swipe issue on form page   * It seems that if you try to swipe starting from an input tag, ios does not let you swipe. However, if a textarea tag is used, then it does allow scrolling.

--- a/www/index.html
+++ b/www/index.html
@@ -101,11 +101,11 @@
        </div>
        <div class="homepage-section">
          <label for="textfield_smell_description">{{describe.label}}<span class="requirement-indicator">{{describe.span}}</span></label>
-         <input type="text" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
+         <textarea type="text" rows="1" class="input-equivalent" name="textfield_smell_description" id="textfield_smell_description" value="" placeholder="" data-clear-btn="true" />
        </div>
        <div class="homepage-section">
          <label for="textfield_feelings_symptoms">{{symptoms.label}}<span class="requirement-indicator">{{symptoms.span}}</span></label>
-         <input type="text" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
+         <textarea type="text" rows="1" class="input-equivalent" name="textfield_feelings_symptoms" id="textfield_feelings_symptoms" value="" placeholder="" data-clear-btn="true" />
        </div>
        <div class="homepage-section">
          <label for="textfield_additional_comments">{{note.label}}<span class="requirement-indicator">{{note.span}}</span></label>
@@ -242,7 +242,7 @@
             <input type="checkbox" id="checkbox_smell_notifications" />
           </label>
             <label for="checkbox_pqhaqi_notifications">{{notification.label4}}<label class="settings-description-smaller">{{notification.label5}}</label>
-                      <input type="checkbox" id="checkbox_pghaqi_notifications" /></label>
+            <input type="checkbox" id="checkbox_pghaqi_notifications" /></label>
           </div>
 
       </div>
@@ -369,7 +369,7 @@
            </ul>
          </div>
        </div>
-    </script><!-- 
+    </script><!--
     <!--overview page template-->
     <script id="overview-tpl" type="text/template">
       <!-- panel -->
@@ -442,7 +442,7 @@
            <li>{{li1}}</li>
            <li>{{li2}}</li>
            <li>{{li3}}</li>
-           <ul class="custom-ul">             
+           <ul class="custom-ul">
              <li>{{li4}}</li>
              <li>{{li5}}</li>
            </ul>
