- Update language to reflect new data sharing relationship

--- a/www/index.html
+++ b/www/index.html
@@ -126,7 +126,7 @@
          </div>
        </div>
        <br/>
-       <div class="regulatory-agency-note">
+       <div class="regulatory-agency-note disabled">
          {{{regulatoryAgencyNote}}}
        </div>
        <div class="submission-disclaimer">
@@ -232,7 +232,7 @@
               <input type="text" name="textfield_address" id="textfield_address" placeholder="{{contact.placeholder3}}" data-clear-btn="true" />
               <input type="text" name="textfield_phone" id="textfield_phone" placeholder="{{contact.placeholder4}}" data-clear-btn="true" />
             </div>
-            <p class="regulatory-agency-note">{{{contact.regulatoryAgencyNote}}}</p>
+            <p class="regulatory-agency-note">{{{contact.regulatoryAgencyNote2021}}}</p>
           </div>
           <div id="notificationsCollapsible" data-role="collapsible">
             <h3>{{notification.h3}}</h3>
