- Add Community Guidelines page   * This is the same content used in Smell MyCity, but I guess never made it into Smell PGH?

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/pages/settingspage.js"></script>
     <script src="js/pages/aboutpage.js"></script>
     <script src="js/pages/howitworkspage.js"></script>
+    <script src="js/pages/communityguidelines.js"></script>
     <script src="js/pages/maperrorpage.js"></script>
     <!-- <script src="js/pages/locationselectpage.js"></script> -->
     <script src="js/firebase.js"></script>
@@ -77,6 +78,7 @@
        <ul data-role="listview" data-inset="false" data-icon="false">
          <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
          <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+         <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
          <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
        </ul><br/>
        <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -172,6 +174,7 @@
         <ul data-role="listview" data-inset="false" data-icon="false">
           <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
           <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+          <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
           <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
         </ul><br/>
         <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -211,6 +214,7 @@
           <ul data-role="listview" data-inset="false" data-icon="false">
             <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
             <li><a href="#" class="ui-btn ui-btn-active" data-transition="none">{{panel.li3}}</a></li>
+            <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
             <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
           </ul><br/>
            <!-- <a class="close-button"href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -328,6 +332,7 @@
        <ul data-role="listview" data-inset="false" data-icon="false">
          <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
          <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+         <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
          <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
        </ul><br/>
        <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -359,6 +364,7 @@
          <ul data-role="listview" data-inset="false" data-icon="false">
             <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
             <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+            <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
             <li><a href="#" class="ui-btn ui-btn-active"  data-transition="none">{{panel.li4}}</a></li>
          </ul><br/>
          <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -407,6 +413,7 @@
          <ul data-role="listview" data-inset="false" data-icon="false">
            <li><a href="#" class="ui-btn ui-btn-active" data-transition="none">{{panel.li2}}</a></li>
            <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+           <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
            <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
          </ul><br/>
          <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
@@ -458,6 +465,42 @@
          </div>
        </div>
     </script>
+    <!--communityguidelines page template-->
+    <script id="communityguidelines-tpl" type="text/template">
+      <!-- panel -->
+       <div data-role="panel" id="communityguidelines-panel" data-display="overlay" data-theme="none" data-position-fixed="true">
+         <ul data-role="listview" data-inset="false" data-icon="false">
+           <li><a href="#overview" data-transition="none">{{panel.li1}}</a></li>
+           <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
+           <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+           <li><a href="#" class="ui-btn ui-btn-active" data-transition="none">{{panel.li5}}</a></li>
+           <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
+         </ul><br/>
+         <!-- <a class="close-button" href="#" data-rel="close" data-role="button" data-icon="carat-l" data-inline="true">{{panel.a}}</a> -->
+       </div>
+       <!-- header -->
+       <div data-role="header" data-position="fixed" data-tap-toggle="false">
+         <a href="#communityguidelines-panel" class="ui-btn ui-corner-all ui-shadow ui-icon-bars ui-btn-icon-left">{{header.a}}</a>
+         <h1>{{header.h1}}</h1>
+         <a class="back-x ui-btn ui-btn-right ui-corner-all ui-shadow ui-icon-delete ui-btn-icon-notext"></a>
+       </div>
+       <!-- main -->
+       <div role="main" class="ui-content">
+         <h2>{{h2_1}}</h2>
+         <p>{{{p1}}}</p>
+         <p>{{p2}}</p>
+         <div>{{{note}}}</div>
+       </div>
+       <!-- footer -->
+       <div data-role="footer" data-position="fixed" data-id="settings_1" data-tap-toggle="false">
+         <div data-role="navbar">
+           <ul>
+             <li><a href="#home" data-transition="none"><span class="ui-icon-edit ui-btn-icon-notext inlineIcon"></span>{{footer.li1}}</a></li>
+             <li><a href="#map" data-transition="none"><span class="ui-icon-user ui-btn-icon-notext inlineIcon"></span>{{footer.li2}}</a></li>
+           </ul>
+         </div>
+       </div>
+    </script>
     <!--locationselect page template-->
     <script id="locationselect-tpl" type="text/template"></script>
     <div data-role="page" id="home">
@@ -474,6 +517,8 @@
     </div>
     <div data-role="page" id="howitworks">
     </div>
+    <div data-role="page" id="communityguidelines">
+    </div>
     <div data-role="page" id="maperror">
     </div>
     <div data-role="page" id="locationselect" class="page-fullscreened">
@@ -482,6 +527,7 @@
         <ul data-role="listview" data-inset="false" data-icon="false">
            <li><a href="#howitworks" data-transition="none">{{panel.li2}}</a></li>
            <li><a href="#settings" data-transition="none">{{panel.li3}}</a></li>
+           <li><a href="#communityguidelines" data-transition="none">{{panel.li5}}</a></li>
            <li><a href="#about" data-transition="none">{{panel.li4}}</a></li>
         </ul>
         <br/>
